fix align control

--- a/css/style.css
+++ b/css/style.css
@@ -88,8 +88,8 @@ header label{
 
 #align td{
     border: 1px solid #ccc;
-    width:15px;
-    height: 15px;
+    width:25px;
+    height: 25px;
     background-color: white;
 }
 
